--- a/Money_Laundering_Notebook.ipynb
+++ b/Money_Laundering_Notebook.ipynb
@@ -20,6 +20,11 @@
    "metadata": {},
    "source": [
     "## Packages to install for below\n",
+    "Make sure pip is up to date for these packages to install\n",
+    "```\n",
+    "python.exe -m pip install --upgrade pip\n",
+    "```\n",
+    "\n",
     "To install the SciKit (sklearn) packages use the below command:\n",
     "```\n",
     "pip install scikit-learn\n",
@@ -30,9 +35,9 @@
     "pip install seaborn\n",
     "```\n",
     "\n",
-    "To install the Pandas packages use the below command:\n",
+    "To install the Plotly packages use the below command:\n",
     "```\n",
-    "pip install pandas\n",
+    "pip install plotly\n",
     "```"
    ]
   },
@@ -88,6 +93,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the above components you will then be able to import the different files that are needing to be analysed with Pandas.\n",
+    "Pandas will be able to pull in the different files, for example with this work from Github."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -135,9 +149,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.2"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "2c411529d52bd385a0c5cc81dc7774bf283ab520578901012898b94c5b56fc2a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
