updating csv files

--- a/Money_Laundering_Notebook.ipynb
+++ b/Money_Laundering_Notebook.ipynb
@@ -107,7 +107,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"\")\n",
+    "df = pd.read_csv(\"https://github.com/jono120/fictional-octo-potato/raw/main/transaction_data_3/fake_bills.csv\")\n",
+    "print(df.head())\n",
     "df.info()\n",
     "print(\"Shape of dataset:\", df.shape)\n",
     "print(\"Overview of the data:\" )\n",
