--- a/Money_Laundering_Notebook.ipynb
+++ b/Money_Laundering_Notebook.ipynb
@@ -56,6 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import numpy as np # linear algebra breakdown\n",
     "import pandas as pd # data processing, CSV files input/output\n",
     "import matplotlib.pyplot as plt # graph plotting\n",
@@ -103,16 +105,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  is_genuine;diagonal;height_left;height_right;margin_low;margin_up;length\n",
+      "0         True;171.81;104.86;104.95;4.52;2.89;112.83                      \n",
+      "1         True;171.46;103.36;103.66;3.77;2.99;113.09                      \n",
+      "2           True;172.69;104.48;103.5;4.4;2.94;113.16                      \n",
+      "3         True;171.36;103.91;103.94;3.62;3.01;113.51                      \n",
+      "4         True;171.73;104.28;103.46;4.04;3.48;112.54                      \n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1500 entries, 0 to 1499\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column                                                                    Non-Null Count  Dtype \n",
+      "---  ------                                                                    --------------  ----- \n",
+      " 0   is_genuine;diagonal;height_left;height_right;margin_low;margin_up;length  1500 non-null   object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 11.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"https://github.com/jono120/fictional-octo-potato/raw/main/transaction_data_3/fake_bills.csv\")\n",
+    "#df = pd.read_csv(\"https://github.com/Jono120/fictional-octo-potato/tree/main/transaction_data_1/bank.csv\")\n",
+    "print(df.head())\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"https://github.com/jono120/fictional-octo-potato/raw/main/transaction_data_3/fake_bills.csv\")\n",
-    "print(df.head())\n",
-    "df.info()\n",
     "print(\"Shape of dataset:\", df.shape)\n",
-    "print(\"Overview of the data:\" )\n",
-    "df.head()"
+    "print(\"Overview of the data:\" )"
    ]
   },
   {
