--- a/Money_Laundering_Notebook.ipynb
+++ b/Money_Laundering_Notebook.ipynb
@@ -52,18 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
     "import numpy as np # linear algebra breakdown\n",
     "import pandas as pd # data processing, CSV files input/output\n",
     "import matplotlib.pyplot as plt # graph plotting\n",
     "import seaborn as sns \n",
     "import warnings\n",
+    "\n",
     "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
     "\n",
     "from numpy import percentile\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
@@ -105,13 +105,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#urls = [\"https://github.com/jono120/fictional-octo-potato/raw/main/transaction_data/fake_bills.csv\", \"https://github.com/Jono120/fictional-octo-potato/tree/main/transaction_data/bank.csv\", \"https://github.com/Jono120/fictional-octo-potato/tree/main/transaction_data/train_trd.csv\"]\n",
+    "#df = pd.read_csv(\"https://github.com/jono120/fictional-octo-potato/raw/main/transaction_data/fake_bills.csv\")\n",
+    "#df = pd.read_csv(\"https://github.com/Jono120/fictional-octo-potato/tree/main/transaction_data/bank.csv\")\n",
+    "#df = pd.read_csv(\"https://github.com/Jono120/fictional-octo-potato/tree/main/transaction_data/train_trd.csv\")\n",
+    "\n",
+    "#dfs = [pd.read_csv(url) for url in urls]\n",
+    "#df = pd.concat(dfs)\n",
+    "#print(df.head())\n",
+    "#df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_full = pd.read_csv(\"https://github.com/jono120/fictional-octo-potato/raw/main/transaction_data/fake_bills.csv\", sep = ';')\n",
+    "\n",
+    "df_false = df_full.loc[df_full['is_genuine']==False]\n",
+    "df_true = df_full.loc[df_full['is_genuine']==True]\n",
+    "df_true = df_true.fillna(df_true.median())\n",
+    "df_false = df_false.fillna(df_false.median())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Shape of dataset: (1500, 7)\n",
+      "Overview of the data:\n",
       "  is_genuine;diagonal;height_left;height_right;margin_low;margin_up;length\n",
       "0         True;171.81;104.86;104.95;4.52;2.89;112.83                      \n",
       "1         True;171.46;103.36;103.66;3.77;2.99;113.09                      \n",
@@ -120,48 +153,310 @@
       "4         True;171.73;104.28;103.46;4.04;3.48;112.54                      \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 1500 entries, 0 to 1499\n",
-      "Data columns (total 1 columns):\n",
-      " #   Column                                                                    Non-Null Count  Dtype \n",
-      "---  ------                                                                    --------------  ----- \n",
-      " 0   is_genuine;diagonal;height_left;height_right;margin_low;margin_up;length  1500 non-null   object\n",
-      "dtypes: object(1)\n",
-      "memory usage: 11.8+ KB\n"
+      "Data columns (total 7 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   is_genuine    1500 non-null   bool   \n",
+      " 1   diagonal      1500 non-null   float64\n",
+      " 2   height_left   1500 non-null   float64\n",
+      " 3   height_right  1500 non-null   float64\n",
+      " 4   margin_low    1463 non-null   float64\n",
+      " 5   margin_up     1500 non-null   float64\n",
+      " 6   length        1500 non-null   float64\n",
+      "dtypes: bool(1), float64(6)\n",
+      "memory usage: 71.9 KB\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv(\"https://github.com/jono120/fictional-octo-potato/raw/main/transaction_data_3/fake_bills.csv\")\n",
-    "#df = pd.read_csv(\"https://github.com/Jono120/fictional-octo-potato/tree/main/transaction_data_1/bank.csv\")\n",
+    "print(\"Shape of dataset:\", df_full.shape)\n",
+    "print(\"Overview of the data:\" )\n",
     "print(df.head())\n",
-    "df.info()"
+    "df_full.info()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>diagonal</th>\n",
+       "      <th>height_left</th>\n",
+       "      <th>height_right</th>\n",
+       "      <th>margin_low</th>\n",
+       "      <th>margin_up</th>\n",
+       "      <th>length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>1000.00000</td>\n",
+       "      <td>1000.00000</td>\n",
+       "      <td>1000.00000</td>\n",
+       "      <td>1000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>171.987080</td>\n",
+       "      <td>103.949130</td>\n",
+       "      <td>103.80865</td>\n",
+       "      <td>4.11592</td>\n",
+       "      <td>3.05213</td>\n",
+       "      <td>113.202430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.300441</td>\n",
+       "      <td>0.300231</td>\n",
+       "      <td>0.29157</td>\n",
+       "      <td>0.31446</td>\n",
+       "      <td>0.18634</td>\n",
+       "      <td>0.359552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>171.040000</td>\n",
+       "      <td>103.140000</td>\n",
+       "      <td>102.82000</td>\n",
+       "      <td>2.98000</td>\n",
+       "      <td>2.27000</td>\n",
+       "      <td>111.760000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>171.790000</td>\n",
+       "      <td>103.740000</td>\n",
+       "      <td>103.61000</td>\n",
+       "      <td>3.91000</td>\n",
+       "      <td>2.93000</td>\n",
+       "      <td>112.950000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>171.990000</td>\n",
+       "      <td>103.950000</td>\n",
+       "      <td>103.81000</td>\n",
+       "      <td>4.11000</td>\n",
+       "      <td>3.05000</td>\n",
+       "      <td>113.205000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>172.200000</td>\n",
+       "      <td>104.140000</td>\n",
+       "      <td>104.00000</td>\n",
+       "      <td>4.33000</td>\n",
+       "      <td>3.18000</td>\n",
+       "      <td>113.460000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>172.920000</td>\n",
+       "      <td>104.860000</td>\n",
+       "      <td>104.95000</td>\n",
+       "      <td>5.04000</td>\n",
+       "      <td>3.74000</td>\n",
+       "      <td>114.440000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          diagonal  height_left  height_right  margin_low   margin_up  \\\n",
+       "count  1000.000000  1000.000000    1000.00000  1000.00000  1000.00000   \n",
+       "mean    171.987080   103.949130     103.80865     4.11592     3.05213   \n",
+       "std       0.300441     0.300231       0.29157     0.31446     0.18634   \n",
+       "min     171.040000   103.140000     102.82000     2.98000     2.27000   \n",
+       "25%     171.790000   103.740000     103.61000     3.91000     2.93000   \n",
+       "50%     171.990000   103.950000     103.81000     4.11000     3.05000   \n",
+       "75%     172.200000   104.140000     104.00000     4.33000     3.18000   \n",
+       "max     172.920000   104.860000     104.95000     5.04000     3.74000   \n",
+       "\n",
+       "            length  \n",
+       "count  1000.000000  \n",
+       "mean    113.202430  \n",
+       "std       0.359552  \n",
+       "min     111.760000  \n",
+       "25%     112.950000  \n",
+       "50%     113.205000  \n",
+       "75%     113.460000  \n",
+       "max     114.440000  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "print(\"Shape of dataset:\", df.shape)\n",
-    "print(\"Overview of the data:\" )"
+    "df_true.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>diagonal</th>\n",
+       "      <th>height_left</th>\n",
+       "      <th>height_right</th>\n",
+       "      <th>margin_low</th>\n",
+       "      <th>margin_up</th>\n",
+       "      <th>length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>500.000000</td>\n",
+       "      <td>500.000000</td>\n",
+       "      <td>500.000000</td>\n",
+       "      <td>500.000000</td>\n",
+       "      <td>500.000000</td>\n",
+       "      <td>500.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>171.901160</td>\n",
+       "      <td>104.190340</td>\n",
+       "      <td>104.143620</td>\n",
+       "      <td>5.215520</td>\n",
+       "      <td>3.350160</td>\n",
+       "      <td>111.630640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.306861</td>\n",
+       "      <td>0.223758</td>\n",
+       "      <td>0.270878</td>\n",
+       "      <td>0.549086</td>\n",
+       "      <td>0.180498</td>\n",
+       "      <td>0.615543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>171.040000</td>\n",
+       "      <td>103.510000</td>\n",
+       "      <td>103.430000</td>\n",
+       "      <td>3.820000</td>\n",
+       "      <td>2.920000</td>\n",
+       "      <td>109.490000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>171.690000</td>\n",
+       "      <td>104.040000</td>\n",
+       "      <td>103.950000</td>\n",
+       "      <td>4.840000</td>\n",
+       "      <td>3.220000</td>\n",
+       "      <td>111.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>171.910000</td>\n",
+       "      <td>104.180000</td>\n",
+       "      <td>104.160000</td>\n",
+       "      <td>5.190000</td>\n",
+       "      <td>3.350000</td>\n",
+       "      <td>111.630000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>172.092500</td>\n",
+       "      <td>104.332500</td>\n",
+       "      <td>104.320000</td>\n",
+       "      <td>5.590000</td>\n",
+       "      <td>3.472500</td>\n",
+       "      <td>112.030000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>173.010000</td>\n",
+       "      <td>104.880000</td>\n",
+       "      <td>104.950000</td>\n",
+       "      <td>6.900000</td>\n",
+       "      <td>3.910000</td>\n",
+       "      <td>113.850000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         diagonal  height_left  height_right  margin_low   margin_up  \\\n",
+       "count  500.000000   500.000000    500.000000  500.000000  500.000000   \n",
+       "mean   171.901160   104.190340    104.143620    5.215520    3.350160   \n",
+       "std      0.306861     0.223758      0.270878    0.549086    0.180498   \n",
+       "min    171.040000   103.510000    103.430000    3.820000    2.920000   \n",
+       "25%    171.690000   104.040000    103.950000    4.840000    3.220000   \n",
+       "50%    171.910000   104.180000    104.160000    5.190000    3.350000   \n",
+       "75%    172.092500   104.332500    104.320000    5.590000    3.472500   \n",
+       "max    173.010000   104.880000    104.950000    6.900000    3.910000   \n",
+       "\n",
+       "           length  \n",
+       "count  500.000000  \n",
+       "mean   111.630640  \n",
+       "std      0.615543  \n",
+       "min    109.490000  \n",
+       "25%    111.200000  \n",
+       "50%    111.630000  \n",
+       "75%    112.030000  \n",
+       "max    113.850000  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def date_to_float(date_data): return (date_data - date_data.min()) / np.timedelta64(1, 'D')\n",
-    "\n",
-    "df[\"Date Days\"] = date_to_float(df[\"VALUE DATE\"])\n",
-    "dates = pd.Series(df[\"DATE\"])\n",
-    "df[\"YEAR\"] = dates.dt.year\n",
-    "df[\"MONTH\"] = dates.dt.month\n",
-    "df[\"WEEK\"] = dates.dt.isocalendar().week\n",
-    "df[\"DAY\"] = dates.dt.day\n",
-    "df[\"DAYOFWEEK\"] = dates.dt.dayofweek\n",
-    "df[\"Account No\"] = df[\"Account No\"].replace(df[\"Account No\"].unique(), [\"A\",\"B\",\"C\",\"D\",\"E\",\"F\",\"G\",\"H\",\"I\",\"J\"])"
+    "df_false.describe()"
    ]
   }
  ],
