pulling in updates for tf, better graphs

--- a/Money_Laundering_Notebook.ipynb
+++ b/Money_Laundering_Notebook.ipynb
@@ -46,62 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: numpy in c:\\users\\devlap02\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (1.24.2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip available: 22.3.1 -> 23.0.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m get_ipython()\u001b[39m.\u001b[39msystem(\u001b[39m'\u001b[39m\u001b[39m{sys.executable}\u001b[39;00m\u001b[39m -m pip install numpy\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m \u001b[39m# linear algebra breakdown\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m \u001b[39m# data processing, CSV files input/output\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m \u001b[39m# graph plotting\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m \n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  WARNING: The script f2py.exe is installed in 'c:\\Users\\DevLap02\\AppData\\Local\\Programs\\Python\\Python311\\Scripts' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
-      "\n",
-      "[notice] A new release of pip available: 22.3.1 -> 23.0.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting numpy\n",
-      "  Using cached numpy-1.24.2-cp311-cp311-win_amd64.whl (14.8 MB)\n",
-      "Installing collected packages: numpy\n",
-      "Successfully installed numpy-1.24.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import sys\n",
-    "!{sys.executable} -m pip install numpy\n",
-    "\n",
     "import numpy as np # linear algebra breakdown\n",
     "import pandas as pd # data processing, CSV files input/output\n",
     "import matplotlib.pyplot as plt # graph plotting\n",
@@ -151,6 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This block would allow for pulling in multiple different sources, but these are not all the same formats, so will throw errors\n",
     "#urls = [\"https://github.com/jono120/fictional-octo-potato/raw/main/transaction_data/fake_bills.csv\", \"https://github.com/Jono120/fictional-octo-potato/tree/main/transaction_data/bank.csv\", \"https://github.com/Jono120/fictional-octo-potato/tree/main/transaction_data/train_trd.csv\"]\n",
     "#df = pd.read_csv(\"https://github.com/jono120/fictional-octo-potato/raw/main/transaction_data/fake_bills.csv\")\n",
     "#df = pd.read_csv(\"https://github.com/Jono120/fictional-octo-potato/tree/main/transaction_data/bank.csv\")\n",
@@ -229,7 +178,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Number of missing values : {df.isnull().sum().sum()}')"
+    "print(f'Number of missing values : {df.isnull().sum().sum()}')\n",
+    "\n",
+    "# This might not work, but lets try it\n",
+    "object_cols = [\"\"]\n",
+    "for i in object_cols:\n",
+    "    print(\"column name : {}\".format(i))\n",
+    "    print(\"NUmber of unique columns of \", i, \":{}\".format(df[i].nunique()))\n",
+    "    print(\"Values of unique columns of \", i, \"is below: \\n{}\".format(df[i].value_counts()))\n",
+    "    print(\"----\")"
    ]
   },
   {
@@ -241,6 +198,81 @@
     "namedfeat = ['Time', 'Amount']\n",
     "for i in df[namedfeat]:\n",
     "    if(df[i].duplicated().sum() > 0): print(f'{i} Number of Duplicatied : {df[i].duplicated().sum()}') "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scatter Plot Graphs\n",
+    "This will showcase the data as scatter plot graphs, in both 3D and 2D styles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.scatter_3d(df, x='margin_low', y='length', z='height_left', color='is_genuine')\n",
+    "px.scatter_3d(df, x='length', y='margin_low', color='is_genuine')\n",
+    "px.scatter_3d(df, x='length', y='margin_up', color='is_genuine')\n",
+    "px.scatter_3d(df, x='length', y='height_left', color='is_genuine')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.scatter(df, x='margin_low', y='length', z='height_left', color='is_genuine')\n",
+    "px.scatter(df, x='length', y='margin_low', color='is_genuine')\n",
+    "px.scatter(df, x='length', y='margin_up', color='is_genuine')\n",
+    "px.scatter(df, x='length', y='height_left', color='is_genuine')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Enrich Data\n",
+    "This will use the TensorFlow platform to enrich the data and analyse information."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow.keras.optimizers import Adam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(40, input_dim=6, activation='relu'),\n",
+    "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = df.iloc[0:, 1:].values\n",
+    "y1 = df['is_genuine']"
    ]
   }
  ],
