updating and removing large files

--- a/Money_Laundering_Notebook.ipynb
+++ b/Money_Laundering_Notebook.ipynb
@@ -57,6 +57,7 @@
     "\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
+    "from plotly.offline import iplot\n",
     "\n",
     "from numpy import percentile\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
@@ -73,7 +74,10 @@
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import precision_score, recall_score, f1_score\n",
-    "from sklearn.metrics import average_precision_score"
+    "from sklearn.metrics import average_precision_score\n",
+    "\n",
+    "warnings.filterwarnings('ignore')\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -117,12 +121,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"https://github.com/jono120/fictional-octo-potato/raw/main/transaction_data/fake_bills.csv\", sep = ';')\n",
+    "# df = pd.read_csv(\"https://github.com/jono120/fictional-octo-potato/raw/main/transaction_data/fake_bills.csv\", sep = ';')\n",
+    "df = pd.read_csv(\"https://github.com/Jono120/fictional-octo-potato/raw/main/transaction_data/bank.csv\")\n",
     "\n",
-    "df_false = df.loc[df['is_genuine']==False]\n",
-    "df_true = df.loc[df['is_genuine']==True]\n",
-    "df_true = df_true.fillna(df_true.median())\n",
-    "df_false = df_false.fillna(df_false.median())"
+    "# Checking the file structure\n",
+    "df.info()\n",
+    "\n",
+    "# df_false = df.loc[df['is_genuine']==False]\n",
+    "# df_true = df.loc[df['is_genuine']==True]\n",
+    "# df_true = df_true.fillna(df_true.median())\n",
+    "# df_false = df_false.fillna(df_false.median())"
    ]
   },
   {
@@ -132,7 +140,7 @@
    "outputs": [],
    "source": [
     "print(\"Shape of dataset:\", df.shape)\n",
-    "print(\"Overview of the data:\" )\n",
+    "print(\"Overview of the data:\")\n",
     "print(df.head())\n",
     "df.info()"
    ]
@@ -143,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_true.describe().round(2)"
+    "print(\"Data types of columns\", df.dtypes)"
    ]
   },
   {
@@ -152,7 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_false.describe().round(2)"
+    "print(\"Description of the dataset:\")\n",
+    "df.describe().round(2)"
    ]
   },
   {
@@ -161,6 +170,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Scans the data to search the percentages of fraud vs no fraud\n",
+    "amount = df.groupby('Class')['Amount'].sum()\n",
+    "fraud, unfraud = len(df[df['Class'] == 1]), len(df[df['Class'] == 0])\n",
+    "fraud_perc, unfraud_perc = (fraud/len(df)) * 100, (unfraud/len(df))*100\n",
+    "\n",
+    "Loss = pd.DataFrame({'Fraud' : ['Fraud', 'No Fraud'], 'Total Amount' : [amount[1], amount[0]], 'Freq.' : [fraud, unfraud], '% perc.' : [fraud_perc, unfraud_perc]})\n",
+    "\n",
+    "Loss = Loss.set_index('Fraud')\n",
+    "Loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initalise the lists to store catagorical and numerical features\n",
     "catfeat = []\n",
     "numfeat = []\n",
     "\n",
@@ -181,12 +208,9 @@
     "print(f'Number of missing values : {df.isnull().sum().sum()}')\n",
     "\n",
     "# This might not work, but lets try it\n",
-    "object_cols = [\"\"]\n",
+    "object_cols = [\"height_left\"]\n",
     "for i in object_cols:\n",
-    "    print(\"column name : {}\".format(i))\n",
-    "    print(\"NUmber of unique columns of \", i, \":{}\".format(df[i].nunique()))\n",
-    "    print(\"Values of unique columns of \", i, \"is below: \\n{}\".format(df[i].value_counts()))\n",
-    "    print(\"----\")"
+    "    print(\"column name : {}\".format(i))"
    ]
   },
   {
@@ -195,9 +219,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "namedfeat = ['Time', 'Amount']\n",
+    "namedfeat = ['height_left', 'height_right']\n",
     "for i in df[namedfeat]:\n",
-    "    if(df[i].duplicated().sum() > 0): print(f'{i} Number of Duplicatied : {df[i].duplicated().sum()}') "
+    "    if(df[i].duplicated().sum() > 0): print(f'{i} Number of Duplicatied : {df[i].duplicated().sum()}') \n",
+    "\n",
+    "for i in df[namedfeat]:\n",
+    "    plt.title(i)\n",
+    "    sns.displot(df[i])\n",
+    "    plt.show()\n",
+    "\n",
+    "for i in df[namedfeat]:\n",
+    "    plt.title(i)\n",
+    "    sns.boxplot(df[i])\n",
+    "    plt.show()\n",
+    "\n",
+    "df[namedfeat].describe().T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize= (18, 10))\n",
+    "sns.heatmap(df.coor(), cmap='YlGn_r', annot = True, fmt = \".2f\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Description of the data variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_counts = df['height_left'].value_counts()\n",
+    "class_counts_percentage = df['height_left'].value_counts(normalize=True) * 100\n",
+    "\n",
+    "print(\"Class counts: \\n\", class_counts)\n",
+    "precision_score(\"\\nClass counts percentage: \\n\", class_counts_percentage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.countplot(x='Class', data=df)\n",
+    "\n",
+    "# Add title, x-axis, y-axis labels for the graph\n",
+    "plt.title(\"Distributions of the targets\")\n",
+    "plt.xlabel(\"Class\")\n",
+    "plt.ylabel(\"Count\")\n",
+    "\n",
+    "# Display the plot\n",
+    "plt.show()\n",
+    "\n",
+    "class_counts = df['Class'].value_counts()\n",
+    "print(class_counts)"
    ]
   },
   {
@@ -215,10 +303,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "px.scatter_3d(df, x='margin_low', y='length', z='height_left', color='is_genuine')\n",
-    "px.scatter_3d(df, x='length', y='margin_low', color='is_genuine')\n",
-    "px.scatter_3d(df, x='length', y='margin_up', color='is_genuine')\n",
-    "px.scatter_3d(df, x='length', y='height_left', color='is_genuine')"
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.offline import iplot\n",
+    "\n",
+    "px.scatter_3d(df, x ='margin_low', y ='length', z ='height_left', color ='is_genuine')\n",
+    "# px.scatter_3d(df, x ='length', y ='margin_low', z  ='height_left', color ='is_genuine')\n",
+    "# px.scatter_3d(df, x ='length', y ='margin_up', z ='height_left', color='is_genuine')\n",
+    "# px.scatter_3d(df, x='length', y='height_left', z='height_left', color='is_genuine')"
    ]
   },
   {
@@ -227,7 +319,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "px.scatter(df, x='margin_low', y='length', z='height_left', color='is_genuine')\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "px.scatter(df, x ='margin_low', y ='length', color ='is_genuine')\n",
     "px.scatter(df, x='length', y='margin_low', color='is_genuine')\n",
     "px.scatter(df, x='length', y='margin_up', color='is_genuine')\n",
     "px.scatter(df, x='length', y='height_left', color='is_genuine')"
@@ -273,6 +368,48 @@
    "source": [
     "x = df.iloc[0:, 1:].values\n",
     "y1 = df['is_genuine']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing\n",
+    "This will scan through the data, to process the data for allowing training data to be created"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the dataset\n",
+    "X = df.drop('Class', axis=1)\n",
+    "y = df['Class']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, stratify = y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "X_train[namedfeat] = StandardScaler().fit_transform(X_train[namedfeat])\n",
+    "X_test[namedfeat] = StandardScaler().fit_transform(X_test[namedfeat])"
    ]
   }
  ],
