updating code base

--- a/Money_Laundering_Notebook.ipynb
+++ b/Money_Laundering_Notebook.ipynb
@@ -50,6 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
     "import numpy as np # linear algebra breakdown\n",
     "import pandas as pd # data processing, CSV files input/output\n",
     "import matplotlib.pyplot as plt # graph plotting\n",
@@ -171,8 +172,8 @@
    "outputs": [],
    "source": [
     "# Scans the data to search the percentages of fraud vs no fraud\n",
-    "amount = df.groupby('Class')['Amount'].sum()\n",
-    "fraud, unfraud = len(df[df['Class'] == 1]), len(df[df['Class'] == 0])\n",
+    "amount = df.groupby('BALANCE AMT')['BALANCE AMT'].sum()\n",
+    "fraud, unfraud = len(df[df['BALANCE AMT'] == 1]), len(df[df['BALANCE AMT'] == 0])\n",
     "fraud_perc, unfraud_perc = (fraud/len(df)) * 100, (unfraud/len(df))*100\n",
     "\n",
     "Loss = pd.DataFrame({'Fraud' : ['Fraud', 'No Fraud'], 'Total Amount' : [amount[1], amount[0]], 'Freq.' : [fraud, unfraud], '% perc.' : [fraud_perc, unfraud_perc]})\n",
@@ -205,12 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Number of missing values : {df.isnull().sum().sum()}')\n",
-    "\n",
-    "# This might not work, but lets try it\n",
-    "object_cols = [\"height_left\"]\n",
-    "for i in object_cols:\n",
-    "    print(\"column name : {}\".format(i))"
+    "print(f'Number of missing values : {df.isnull().sum().sum()}')"
    ]
   },
   {
@@ -219,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "namedfeat = ['height_left', 'height_right']\n",
+    "namedfeat = [' WITHDRAWAL AMT ', ' DEPOSIT AMT ']\n",
     "for i in df[namedfeat]:\n",
     "    if(df[i].duplicated().sum() > 0): print(f'{i} Number of Duplicatied : {df[i].duplicated().sum()}') \n",
     "\n",
@@ -261,11 +257,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_counts = df['height_left'].value_counts()\n",
-    "class_counts_percentage = df['height_left'].value_counts(normalize=True) * 100\n",
+    "class_counts = df[' WITHDRAWAL AMT '].value_counts()\n",
+    "class_counts_percentage = df[' WITHDRAWAL AMT '].value_counts(normalize=True) * 100\n",
     "\n",
     "print(\"Class counts: \\n\", class_counts)\n",
-    "precision_score(\"\\nClass counts percentage: \\n\", class_counts_percentage)"
+    "#precision_score(\"\\nClass counts percentage: \\n\", class_counts_percentage)"
    ]
   },
   {
@@ -274,17 +270,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.countplot(x='Class', data=df)\n",
+    "sns.countplot(x=' WITHDRAWAL AMT ', data=df)\n",
     "\n",
     "# Add title, x-axis, y-axis labels for the graph\n",
     "plt.title(\"Distributions of the targets\")\n",
-    "plt.xlabel(\"Class\")\n",
+    "plt.xlabel(\" WITHDRAWAL AMT \")\n",
     "plt.ylabel(\"Count\")\n",
     "\n",
     "# Display the plot\n",
     "plt.show()\n",
     "\n",
-    "class_counts = df['Class'].value_counts()\n",
+    "class_counts = df[' WITHDRAWAL AMT '].value_counts()\n",
     "print(class_counts)"
    ]
   },
@@ -307,7 +303,7 @@
     "import plotly.graph_objects as go\n",
     "from plotly.offline import iplot\n",
     "\n",
-    "px.scatter_3d(df, x ='margin_low', y ='length', z ='height_left', color ='is_genuine')\n",
+    "px.scatter_3d(df, x =' WITHDRAWAL AMT ', y =' DEPOSIT AMT ', z ='BALANCE AMT', color ='DATE')\n",
     "# px.scatter_3d(df, x ='length', y ='margin_low', z  ='height_left', color ='is_genuine')\n",
     "# px.scatter_3d(df, x ='length', y ='margin_up', z ='height_left', color='is_genuine')\n",
     "# px.scatter_3d(df, x='length', y='height_left', z='height_left', color='is_genuine')"
@@ -322,10 +318,10 @@
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "\n",
-    "px.scatter(df, x ='margin_low', y ='length', color ='is_genuine')\n",
-    "px.scatter(df, x='length', y='margin_low', color='is_genuine')\n",
-    "px.scatter(df, x='length', y='margin_up', color='is_genuine')\n",
-    "px.scatter(df, x='length', y='height_left', color='is_genuine')"
+    "px.scatter(df, x =' WITHDRAWAL AMT ', y =' DEPOSIT AMT ', color ='DATE')\n",
+    "#px.scatter(df, x='length', y='margin_low', color='is_genuine')\n",
+    "#px.scatter(df, x='length', y='margin_up', color='is_genuine')\n",
+    "#px.scatter(df, x='length', y='height_left', color='is_genuine')"
    ]
   },
   {
