--- a/Money_Laundering_Notebook.ipynb
+++ b/Money_Laundering_Notebook.ipynb
@@ -133,6 +133,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overview of dataset\n",
+    "This shows the breakdown of the dataset and shows what is visible in the information"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
