added new titles

--- a/Money_Laundering_Notebook.ipynb
+++ b/Money_Laundering_Notebook.ipynb
@@ -381,6 +381,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training and Testing Splits\n",
+    "This section will pull all information that is needed for building out the Training and Testing models within the datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -388,6 +397,15 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, stratify = y)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Transformations\n",
+    "The below section will enable the information to be transformed into the relevant testing and training information, for further graphing and data sorting."
    ]
   },
   {
