--- a/Money_Laundering_Notebook.ipynb
+++ b/Money_Laundering_Notebook.ipynb
@@ -9,9 +9,23 @@
     "This is a breakdown of the overall models that can be developed to make AI models to predict and detect money-laundering or fraud within financial datasets.\n",
     "Data sources for these datasets come from sources on Kaggle:\n",
     "- [Credit Card Fraud Detection | Kaggle](https://www.kaggle.com/datasets/mlg-ulb/creditcardfraud?datasetId=310&sortBy=voteCount)\n",
-    "- [Fake Bills | Kaggle](\"https://www.kaggle.com/datasets/alexandrepetit881234/fake-bills\")\n",
     "\n",
-    "These data sets contain various amounts of data dating till 2013, with various levels of information that is captured from financial entities."
+    "These data sets contain various amounts of data dating till 2013, with various levels of information that is captured from financial entities.\n",
+    "\n",
+    "@Article{Hunter:2007,\n",
+    "  Author    = {Hunter, J. D.},\n",
+    "  Title     = {Matplotlib: A 2D graphics environment},\n",
+    "  Journal   = {Computing in Science \\& Engineering},\n",
+    "  Volume    = {9},\n",
+    "  Number    = {3},\n",
+    "  Pages     = {90--95},\n",
+    "  abstract  = {Matplotlib is a 2D graphics package used for Python for\n",
+    "  application development, interactive scripting, and publication-quality\n",
+    "  image generation across user interfaces and operating systems.},\n",
+    "  publisher = {IEEE COMPUTER SOC},\n",
+    "  doi       = {10.1109/MCSE.2007.55},\n",
+    "  year      = 2007\n",
+    "}"
    ]
   },
   {
@@ -148,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.shape()"
+    "df.shape"
    ]
   },
   {
@@ -178,6 +192,24 @@
    "outputs": [],
    "source": [
     "df['Is Laundering'] = df['Is Laundering'].replace({'Yes': 1, 'No':0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_subset = df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_subset.shape"
    ]
   },
   {
@@ -288,8 +320,21 @@
     "class_counts_dep = df['Amount Paid'].value_counts()\n",
     "class_counts_percentage_dep = df['Amount Paid'].value_counts(normalize=True) * 100\n",
     "\n",
-    "print(\"Withdrawal amounts: \\n\", class_counts_with)\n",
-    "print(\"Deposit amounts: \\n\", class_counts_dep)"
+    "print(\"Amount Received: \\n\", class_counts_with)\n",
+    "print(\"Amount Paid: \\n\", class_counts_dep)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Checks the quality of the deposit amounts in the dataset\n",
+    "class_counts_lau = df['Is Laundering'].value_counts()\n",
+    "class_counts_percentage_lau = df['Is Laundering'].value_counts(normalize=True) * 100\n",
+    "\n",
+    "print(\"Is Laundering: \\n\", class_counts_lau)"
    ]
   },
   {
@@ -389,6 +434,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_subset['Amount Paid'] = pd.to_numeric(df_subset['Amount Paid'], errors='coerce')\n",
+    "df_subset.boxplot(column='Amount Paid', by='Is Laundering')\n",
+    "\n",
+    "plt.title('Box plot graph for Payments vs Fraud')\n",
+    "plt.show()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -426,8 +484,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = df.iloc[0:, 1:].values\n",
+    "X = df.iloc[0:, 1:].values\n",
     "y = df['Payment Format']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Split the data into training (70%) and testing sets (30%)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)"
    ]
   },
   {
