--- a/Money_Laundering_Notebook.ipynb
+++ b/Money_Laundering_Notebook.ipynb
@@ -8,7 +8,7 @@
     "# Anti-Money Laundering and Fraud Prediction\n",
     "This is a breakdown of the overall models that can be developed to make AI models to predict and detect money-laundering or fraud within financial datasets.\n",
     "Data sources for these datasets come from sources on Kaggle:\n",
-    "- [Credit Card Fraud Detection | Kaggle](https://www.kaggle.com/datasets/mlg-ulb/creditcardfraud?datasetId=310&sortBy=voteCount)\n",
+    "- [IBM Transactions for Anti Money Laundering (AML) | Kaggle](https://www.kaggle.com/code/alexisbcook/creating-your-own-notebooks/tutorial)\n",
     "\n",
     "These data sets contain various amounts of data dating till 2013, with various levels of information that is captured from financial entities.\n",
     "\n",
