--- a/Money_Laundering_Notebook.ipynb
+++ b/Money_Laundering_Notebook.ipynb
@@ -59,6 +59,7 @@
     "%pip install scikit-learn\n",
     "%pip install seaborn\n",
     "%pip install plotly\n",
+    "%pip install tensorflow\n",
     "%pip install pandas\n",
     "%pip install pyodbc\n",
     "%pip install openpyxl\n",
@@ -136,9 +137,12 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "url ='https://onedrive.live.com/download?cid=4A3B8562A2CB78B3&resid=4A3B8562A2CB78B3%21158025&authkey=ACHHRI10a-phyio&em=2'\n",
+    "#url ='https://onedrive.live.com/download?cid=4A3B8562A2CB78B3&resid=4A3B8562A2CB78B3%21158025&authkey=ACHHRI10a-phyio&em=2'\n",
+    "url ='https://onedrive.live.com/download?cid=4A3B8562A2CB78B3&resid=4A3B8562A2CB78B3%21158163&authkey=AFMTDEy7Ff3oCL8'\n",
+    "#url ='https://onedrive.live.com/download?cid=4A3B8562A2CB78B3&resid=4A3B8562A2CB78B3%21158165&authkey=APswAhpzUuOs4KQ'\n",
     "\n",
-    "df = pd.read_excel(url)\n",
+    "#df = pd.read_excel(url)\n",
+    "df = pd.read_csv(url)\n",
     "df.info()"
    ]
   },
@@ -443,11 +447,12 @@
     "data = pd.read_excel(url)\n",
     "\n",
     "# Split the dataset\n",
-    "X = df.drop('Payment Format', axis=1)\n",
+    "X = df['Is Laundering']\n",
     "y = df['Payment Format']\n",
     "\n",
     "# Plot\n",
-    "plt.bar(labels, values)\n",
+    "bars = plt.bar(X, y)\n",
+    "plt.bar_label(bars)\n",
     "\n",
     "plt.show()"
    ]
